# IndoorGraphLocalization

./: .gitignore  CMakeLists.txt  README.md  build.sh  parameters.txt
dataset/: possibleRoutes.map
dataset/2019_04_02_PUTMC_Floor3_Experia_map/: positions.map  possibleRoutes.map  scale.map  walls.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_map/imgs/: images.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/kc_1/: acc.map  orient.map  positions.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/kc_2/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/kc_3/: acc.map  orient.map  positions.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/kc_4/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/mn_1/: acc.map  orient.map  positions.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/mn_2/: acc.map  orient.map  positions.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/mn_3/: acc.map  orient.map  positions.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/mn_4/: acc.map  orient.map  positions.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/mn_5/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/mn_sick_1/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/mn_sick_2/: acc.map  orient.map  positions.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/mn_sick_3/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/ps_1/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/2019_04_02_PUTMC_Floor3_Experia_trajs/ps_2/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/GT/1/: nodes.map
dataset/GT/10/: nodes.map
dataset/GT/11/: nodes.map
dataset/GT/12/: nodes.map
dataset/GT/13/: nodes.map
dataset/GT/14/: nodes.map
dataset/GT/15/: nodes.map
dataset/GT/16/: nodes.map
dataset/GT/17/: nodes.map
dataset/GT/18/: nodes.map
dataset/GT/19/: nodes.map
dataset/GT/2/: nodes.map
dataset/GT/20/: nodes.map
dataset/GT/21/: nodes.map
dataset/GT/22/: nodes.map
dataset/GT/23/: nodes.map
dataset/GT/24/: nodes.map
dataset/GT/3/: nodes.map
dataset/GT/4/: nodes.map
dataset/GT/5/: nodes.map
dataset/GT/6/: nodes.map
dataset/GT/7/: nodes.map
dataset/GT/8/: nodes.map
dataset/GT/9/: nodes.map
dataset/PUTMC_Floor3_Xperia_map/: positions.map  scale.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj1/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj10_JW/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj11/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj12/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj13/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj14/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj15/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj16/: acc.map  orient.map  positions.map  scale.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj17/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj18/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj19/: acc.map  orient.map  positions.map  wifi.map
dataset/PUTMC_Floor3_Xperia_trajs/xperia_traj2/: acc.map  orient.map  positions.map  wifi.map
include/: GraphRoutes.h  graphManager.h  parameters.h  stepometer.h  wifiLocalization.h
include/DataReadWrite/: dataReadWrite.h
include/fastable/: FastABLE.h  OpenABLE.h
include/kissfft/: kissfft.hh
include/ldb/: ldb.h
include/local_g2o/: edge_one_prior.h  edge_pdr.h  edge_stepometer.h  edge_vpr.h  edge_wall.h  edge_wknn.h  edge_wknn_deadzone.h  register_types.h  vertex_one.h
scripts/: run.py  summarizeResults.py  visGraphResultSensors.py
src/: GraphRoutes.cpp  fastable_train.cpp  graphManager.cpp  source.cpp  stepometer.cpp  wifiLocalization.cpp
src/DataReadWrite/: dataReadWrite.cpp
src/fastable/: FastABLE.cpp  OpenABLE.cpp  dbscan.cpp
src/ldb/: ldb.cpp
src/local_g2o/: edge_one_prior.cpp  edge_pdr.cpp  edge_stepometer.cpp  edge_vpr.cpp  edge_wall.cpp  edge_wknn.cpp  edge_wknn_deadzone.cpp  register_types.cpp  vertex_one.cpp
(+65 files in other folders)
